--- a/css/main.scss
+++ b/css/main.scss
@@ -15,9 +15,9 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color:      #dc0714;
 
-$grey-color:       #828282;
+$grey-color:       #cdcd00;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
@@ -46,7 +46,7 @@ $on-laptop:        800px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "base",
-        "layout",
-        "syntax-highlighting"
+        "_base",
+        "_layout",
+        "_syntax-highlighting"
 ;
