--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -93,11 +93,11 @@ a {
     text-decoration: none;
 
     &:visited {
-        color: $brand-color;
+        color: darken($brand-color, 15%);
     }
 
     &:hover {
-        color: darken($brand-color, 15%);
+        color: $text-color;
         text-decoration: underline;
     }
 }
