--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -100,7 +100,7 @@
 				width: 66.666666666%;
 
 				img {
-					width: 100%;
+					max-width: 100%;
 				}
 			}
 
@@ -114,7 +114,7 @@
 				}
 
 				img {
-					width: 100%;
+					max-width: 100%;
 				}
 			}
 
