--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,7 +44,7 @@
 				</div> <!-- main -->
 
 
-		{% include footer.html %}
+		{% include post-footer.html %}
 
 		<script src="{{site.url}}/assets/js/jquery.min.js"></script>
 	  <script src="{{site.url}}/assets/js/jquery.dropotron.min.js"></script>
