--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -24,6 +24,12 @@
 
 			.content {
 				@include padding(4em, 4em);
+
+				.post-list {
+					img {
+						max-width:100%;
+					}
+				}
 			}
 		}
 
