--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,51 +1,66 @@
 <!-- Footer -->
-  <section id="footer">
+<section id="footer">
     <div class="inner">
-      <section class="about">
-        <h4>Send us a Message</h4>
-        <form action="//formspree.io/info@lfcdenver.com" method="POST">
-          <div class="row uniform">
-            <div class="6u 12u$(xsmall)">
-              <input type="text" name="name" id="demo-name" value="" placeholder="Name" />
-            </div>
-            <div class="6u$ 12u$(xsmall)">
-              <input type="email" name="_replyto" id="demo-email" value="" placeholder="Email" />
-            </div>
-            <div class="12u$">
-              <div class="select-wrapper">
-                <select name="_subject" id="demo-category">
-                  <option value="Not Selected">- Category -</option>
-                  <option value="General">General</option>
-                  <option value="Matchday">Matchday</option>
-                  <option value="Merch">Merch</option>
-                  <option value="Tickets">Tickets</option>
-                </select>
-              </div>
-            </div>
-            <div class="12u$">
-              <textarea name="message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-            </div>
-            <input type="text" name="_gotcha" style="display:none" />
-            <div class="12u$">
-              <ul class="actions">
-                <input type="hidden" name="_next" value="{{ site.baseurl }}/thanks" />
-                <li><input type="submit" value="Send Message" class="special" /></li>
-                <li><input type="reset" value="Reset" /></li>
-              </ul>
-            </div>
-          </div>
-        </form>
-      </section>
-      <section>
-        <h3>Get in Touch</h3>
-        <ul class="contact">
-          <li class="fa-envelope"><a href="mailto:info@lfcdenver.com">info@lfcdenver.com</a></li>
-          <li class="fa-twitter"><a href="https://twitter.com/lfcdenver">@lfcdenver</a></li>
-          <li class="fa-facebook"><a href="https://www.facebook.com/LFCDenver/">facebook.com/lfcdenver</a></li>
-        </ul>
-      </section>
+        <section class="about">
+            <h4>Send us a Message</h4>
+            <form action="//formspree.io/info@lfcdenver.com" method="POST">
+                <div class="row uniform">
+                    <div class="6u 12u$(xsmall)">
+                        <input type="text" name="name" id="demo-name" value="" placeholder="Name" />
+                    </div>
+                    <div class="6u$ 12u$(xsmall)">
+                        <input
+                            type="email"
+                            name="_replyto"
+                            id="demo-email"
+                            value=""
+                            placeholder="Email"
+                        />
+                    </div>
+                    <div class="12u$">
+                        <div class="select-wrapper">
+                            <select name="_subject" id="demo-category">
+                                <option value="Not Selected">- Category -</option>
+                                <option value="General">General</option>
+                                <option value="Matchday">Matchday</option>
+                                <option value="Merch">Merch</option>
+                                <option value="Tickets">Tickets</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="12u$">
+                        <textarea
+                            name="message"
+                            id="demo-message"
+                            placeholder="Enter your message"
+                            rows="6"
+                        ></textarea>
+                    </div>
+                    <input type="text" name="_gotcha" style="display:none" />
+                    <div class="12u$">
+                        <ul class="actions">
+                            <input type="hidden" name="_next" value="{{ site.baseurl }}/thanks" />
+                            <li><input type="submit" value="Send Message" class="special" /></li>
+                            <li><input type="reset" value="Reset" /></li>
+                        </ul>
+                    </div>
+                </div>
+            </form>
+        </section>
+        <section>
+            <h3>Get in Touch</h3>
+            <ul class="contact">
+                <li class="fa-envelope">
+                    <a href="mailto:info@lfcdenver.com">info@lfcdenver.com</a>
+                </li>
+                <li class="fa-twitter"><a href="https://twitter.com/lfcdenver">@lfcdenver</a></li>
+                <li class="fa-facebook">
+                    <a href="https://www.facebook.com/LFCDenver/">facebook.com/lfcdenver</a>
+                </li>
+            </ul>
+        </section>
     </div>
     <div class="copyright">
-      <p>Copyright &copy; LFC Denver. All rights reserved.</p>
+        <p>Copyright &copy; OLSC Denver. All rights reserved.</p>
     </div>
-  </section>
+</section>
