--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,20 @@
-      <!-- Header -->
-        <header id="header">
-          <h1><a href="{{site.url}}">LFC Denver</a></h1>
-          <nav>
-            <a href="#menu">Menu</a>
-          </nav>
-        </header>
+<!-- Header -->
+<header id="header">
+    <h1><a href="{{site.url}}">OLSC Denver</a></h1>
+    <nav>
+        <a href="#menu">Menu</a>
+    </nav>
+</header>
 
-      <!-- Menu -->
-        <nav id="menu">
-          <div class="inner">
-            <h2>Menu</h2>
-            <ul class="links">
-              <li><a href="{{site.url}}">Home</a></li>
-              <li><a href="{{site.url}}/news">News</a></li>
-              <li><a href="http://theabbeytaverndenver.com" target="_blank">Abbey Tavern</a></li>
-              <li><a href="{{site.url}}/contact">Contact</a></li>
-            </ul>
-          </div>
-        </nav>
+<!-- Menu -->
+<nav id="menu">
+    <div class="inner">
+        <h2>Menu</h2>
+        <ul class="links">
+            <li><a href="{{site.url}}">Home</a></li>
+            <li><a href="{{site.url}}/news">News</a></li>
+            <li><a href="http://theabbeytaverndenver.com" target="_blank">Abbey Tavern</a></li>
+            <li><a href="{{site.url}}/contact">Contact</a></li>
+        </ul>
+    </div>
+</nav>
