--- a/_includes/post-footer.html
+++ b/_includes/post-footer.html
@@ -1,33 +1,72 @@
 <!-- Footer -->
-  <section id="footer">
+<section id="footer">
     <div class="inner">
-      <section class="about">
-        <!-- Begin MailChimp Signup Form -->
-          <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-          <div id="mc_embed_signup">
-          <form action="//lfcdenver.us12.list-manage.com/subscribe/post?u=7b1b770d7ecbe9a95d170a31f&amp;id=908a18eab5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-              <div id="mc_embed_signup_scroll">
-            <label for="mce-EMAIL"><h3>Subscribe to our mailing list</h3></label>
-            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7b1b770d7ecbe9a95d170a31f_908a18eab5" tabindex="-1" value=""></div>
-              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-              </div>
-          </form>
-          </div>
+        <section class="about">
+            <!-- Begin MailChimp Signup Form -->
+            <link
+                href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css"
+                rel="stylesheet"
+                type="text/css"
+            />
+            <div id="mc_embed_signup">
+                <form
+                    action="//lfcdenver.us12.list-manage.com/subscribe/post?u=7b1b770d7ecbe9a95d170a31f&amp;id=908a18eab5"
+                    method="post"
+                    id="mc-embedded-subscribe-form"
+                    name="mc-embedded-subscribe-form"
+                    class="validate"
+                    target="_blank"
+                    novalidate
+                >
+                    <div id="mc_embed_signup_scroll">
+                        <label for="mce-EMAIL"><h3>Subscribe to our mailing list</h3></label>
+                        <input
+                            type="email"
+                            value=""
+                            name="EMAIL"
+                            class="email"
+                            id="mce-EMAIL"
+                            placeholder="email address"
+                            required
+                        />
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                            <input
+                                type="text"
+                                name="b_7b1b770d7ecbe9a95d170a31f_908a18eab5"
+                                tabindex="-1"
+                                value=""
+                            />
+                        </div>
+                        <div class="clear">
+                            <input
+                                type="submit"
+                                value="Subscribe"
+                                name="subscribe"
+                                id="mc-embedded-subscribe"
+                                class="button"
+                            />
+                        </div>
+                    </div>
+                </form>
+            </div>
         </section>
 
         <!--End mc_embed_signup-->
-      <section>
-        <h3>Get in Touch</h3>
-        <ul class="contact">
-          <li class="fa-envelope"><a href="mailto:info@lfcdenver.com">info@lfcdenver.com</a></li>
-          <li class="fa-twitter"><a href="https://twitter.com/lfcdenver">@lfcdenver</a></li>
-          <li class="fa-facebook"><a href="https://www.facebook.com/LFCDenver/">facebook.com/lfcdenver</a></li>
-        </ul>
-      </section>
+        <section>
+            <h3>Get in Touch</h3>
+            <ul class="contact">
+                <li class="fa-envelope">
+                    <a href="mailto:info@lfcdenver.com">info@lfcdenver.com</a>
+                </li>
+                <li class="fa-twitter"><a href="https://twitter.com/lfcdenver">@lfcdenver</a></li>
+                <li class="fa-facebook">
+                    <a href="https://www.facebook.com/LFCDenver/">facebook.com/lfcdenver</a>
+                </li>
+            </ul>
+        </section>
     </div>
     <div class="copyright">
-      <p>Copyright &copy; LFC Denver. All rights reserved.</p>
+        <p>Copyright &copy; OLSC Denver. All rights reserved.</p>
     </div>
-  </section>
+</section>
